# pipeline_finetune

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml
jobs/: jobs.example.jsonl
pipeline_transcriber/: __init__.py  main.py  orchestrator.py
pipeline_transcriber/models/: __init__.py  alert.py  config.py  execution.py  job.py  stage.py
pipeline_transcriber/stages/: __init__.py  align.py  asr.py  assign_speakers.py  audio_prepare.py  base.py  diarize.py  download.py  export.py  finalize.py  input_validate.py  post_process.py  qa.py  vad.py
pipeline_transcriber/utils/: __init__.py  alerts.py  ffmpeg.py  logging.py  retry.py  rttm.py  secret_mask.py  state.py  subprocess.py  timecode.py  yt_dlp.py
scripts/: bootstrap.ps1  bootstrap.sh  check_env.py  check_hf_access.py
tests/: test_architectural_improvements.py  test_critical_fixes.py  test_e2e.py  test_models.py  test_orchestrator.py  test_phase2.py  test_phase3.py  test_phase4.py  test_stages.py  test_utils.py  test_vad_clips_mode.py
