[project]
name = "pipeline-transcriber"
version = "0.1.0"
description = "Automated pipeline for transcription, diarization, and word-level timestamps"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "typer>=0.9",
    "structlog>=23.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-tmp-files>=0.0.2",
]

[project.scripts]
pipeline = "pipeline_transcriber.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline_transcriber"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-m 'not e2e'"
markers = [
    "e2e: real end-to-end tests requiring ffmpeg, whisperx, pyannote (skipped by default)",
]
